[refactor] Java11: Use Files.read/writeString